@@ -1,17 +1,0 @@
-# $NetBSD: Makefile,v 1.2 2019/11/04 21:12:59 rillig Exp $
-#
-
-DISTNAME=	pyDes-2.0.1
-PKGNAME=	${PYPKGPREFIX}-Des-2.0.1
-CATEGORIES=	security
-MASTER_SITES=	http://twhiteman.netfirms.com/pyDES/
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://twhiteman.netfirms.com/pyDES/
-COMMENT=	DES implementation in python
-LICENSE=	public-domain
-
-PYDISTUTILSPKG=	yes
-
-.include "../../lang/python/extension.mk"
-.include "../../mk/bsd.pkg.mk"
