@@ -1,4 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2012/11/04 21:57:11 pettai Exp $
-${PYSITELIB}/pyDes.py
-${PYSITELIB}/pyDes.pyc
-${PYSITELIB}/pyDes.pyo
